[project]
name = "github-profile-kit"
version = "0.1.0"
description = "github-profile-kit"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Rajesh", email = "hyperoot.tech@proton.me" }]
dependencies = [
  "dotenv>=0.9.9",
  "jinja2>=3.1.6",
  "pyyaml>=6.0.3",
  "requests>=2.34.0",
]

[dependency-groups]
dev = ["prek>=0.3.13", "ruff>=0.15.12", "ty>=0.0.35"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyp3r00t"]
